[package]
name = "surge-ping"
version = "0.8.4"
authors = ["kolapapa <kolapapa2021@gmail.com>"]
edition = "2018"
license = "MIT"
homepage = "https://github.com/kolapapa/surge-ping"
repository = "https://github.com/kolapapa/surge-ping"
description = "Asynchronous ICMP ping library"
keywords = ["tokio", "icmp", "ping"]
categories = ["network-programming", "asynchronous"]

[dependencies]
hex = "0.4.3"
parking_lot = "0.12.1"
pnet_packet = "0.34"
rand = "0.9.0"
socket2 = { version = "0.6.1", features = ["all"] }
thiserror = "1.0.57"
tokio = { version = "1.36", features = ["time", "sync", "net", "rt"] }
tracing = "0.1.40"


[dev-dependencies]
structopt = "0.3.26"
pretty_env_logger = "0.4.0"
tokio = { version = "1", features = ["full"] }
futures = "0.3.25"

[[example]]
name = "simple"

[[example]]
name = "cmd"

[[example]]
name = "multi_ping"
